[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmingpt"
version = "0.0.1"
description = "Minimal GPT Implementation in PyTorch Lightning"
readme = "README.md"

[project.scripts]
train = "litmingpt.train:main"

[project.urls]
Source = "https://github.com/tomogwen/litgpt"
Issues = "https://github.com/tomogwen/litgpt/issues"
